syntax = "proto3";
option csharp_namespace = "SmartFleet.Telemetry.Protos";

message TelemetryData {
  string vehicleId = 1;
  double latitude = 2;
  double longitude = 3;
  double speed = 4;
  double fuelLevel = 5;
  int64 timestamp = 6;
}

message TelemetryAck {
  string message = 1;
}

service Telemetry {
  rpc StreamTelemetry(stream TelemetryData) returns (stream TelemetryAck);
}
